crates/forge_provider/src/openai/snapshots/forge_provider__openai__provider__tests__fetch_models_http_error_status.snap
---
source: crates/forge_provider/src/openai/provider.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "401 GET http://127.0.0.1:<port>/models",
        source: Object {
            "error": Object {
                "code": Number(401),
                "message": String("Invalid API key"),
            },
        },
    },
}
